# ultra-graph

./: .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SETUP_SUMMARY.md  WIKI.md  justfile  pyproject.toml
.claude/: instructions.md
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  publish.yml
.obsidian/: ICLOUD_SYNC.md  sync.sh
_bmad/: module-help.csv
assets/: make_figures.py
docs/: references.md
docs/superpowers/specs/: 2026-07-10-ultragraph-design.md
examples/: anonymus_lm.py  char_lm.py  enrich_corpus.py  fetch_gesta.py  fetch_hungarian.py  gpt_lm.py  hungarian_history.py  hungarian_history_live.py  hungarian_lm.py  mesh_lm.py  mini_gpt.py  moe_lm.py  render_viz.py  transformer_lm.py
examples/data/: anonymus.gpt.npz  gesta_hungarorum.txt  hungarian.gpt.npz  hungarian_corpus.txt
mcp_server/: README.md  server.py
skills/corpus-trainer/: .memlog.md  SKILL.md  customize.toml
skills/corpus-trainer/evals/: cases.json
skills/corpus-trainer/references/: deploy-checkpoint.md  enrich-corpus.md  fetch-corpus.md  train-lm.md
skills/ultragraph-dev/: .memlog.md  SKILL.md  customize.toml
skills/ultragraph-dev/evals/: cases.json
skills/ultragraph-dev/references/: explain.md  train-model.md  wire-tree.md  write-op.md
skills/viz-doc/: .memlog.md  SKILL.md  customize.toml
skills/viz-doc/evals/: cases.json
skills/viz-doc/references/: compare-checkpoints.md  model-card.md  (+2 more)
tests/: run_all.py  test_advanced.py  test_attention.py  test_autograd.py  test_cat.py  test_cli.py  test_core.py  test_dx.py  test_e2e.py  test_gpt.py  test_hub.py  test_io.py  test_linker.py  test_mesh.py  test_optim.py  test_pack.py  test_quant.py  test_rope.py  test_rp2040.py  test_tokenize.py  test_ugm.py  test_vaked.py  test_viz.py  test_vizard.py  test_wasm.py
ultragraph/: __init__.py  autograd.py  cli.py  client.py  command.py  compile.py  core.py  io.py  linker.py  model.py  model_config.py  nn.py  optim.py  pack.py  quant.py  rp2040.py  tokenize.py  ugm.py  vaked.py  viz.py  wasm.py  wiki.py
ultragraph/viz/: __init__.py  mpl.py  svg.py
ultragraph/vizard/: __init__.py  anim.py  dashboard.py  export.py
vakedc/: VENDORED.md  emit.py  graph.py  parser.py  resolve.py  tracing.py
wiki/: README.md  hot.md  index.md  log.md  overview.md
wiki/concepts/: straight_through_estimator.md  three_level_byte_graph_architecture.md
wiki/entities/: tensor.md  tree.md
(+9 files in other folders)
