[project]
name = "ultragraph"
version = "0.1.0"
description = "A pure-Python (+numpy) byte-graph that is a 1-bit (ternary) LLM: dunder API, autograd, ultra-edges, visualization."
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }
dependencies = ["numpy>=2.0"]

[project.optional-dependencies]
viz = ["matplotlib>=3.8"]

[dependency-groups]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ultragraph"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.uv]
package = true
