[project]
name = "ultragraph-1bit"
version = "0.6.1"
description = "A pure-Python (+numpy) byte-graph that is a 1-bit (ternary) LLM: dunder API, autograd, ultra-edges, visualization."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = ["numpy>=2.0"]

[project.optional-dependencies]
viz = ["matplotlib>=3.8"]

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.6"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ultragraph"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.uv]
package = true

[tool.ruff]
line-length = 110

[tool.ruff.lint]
select = ["F", "E7", "E9", "I"]
